@@ -1,7 +1,7 @@
 { pkgs, lib, config, desktop, ... }:
 let
   cfg = config.services.displayManager.sddm;
-  inherit (lib) types mkOption mkIf;
+  inherit (lib) types mkOption mkIf mkDefault;
   desktops = lib.splitString "," desktop;
   preferredDesktop = builtins.elemAt desktops 0;
 
@@ -20,39 +20,33 @@ in
 {
   options = {
     modules.display-managers.sddm.enable = lib.mkEnableOption "enable sddm module";
-    services.displayManager.sddm.themeConfig = mkOption {
-      description = "sddm theme configuration written to theme.conf.user";
-      type = types.attrsOf types.str;
-      default = { };
-    };
-    services.displayManager.sddm.themeName = mkOption {
-      description = "name of sddm theme to use. Must match file name in /pkgs/themes/sddm exactly without .nix";
-      type = types.str;
-      default = "astronaut";
+    services.displayManager.sddm = {
+      themePackage = mkOption {
+        description = "package for sddm theme";
+        type = types.package;
+        default = pkgs.sddm-astronaut.override { inherit (cfg) themeConfig; };
+      };
+      themeConfig = mkOption {
+        description = "sddm theme configuration written to theme.conf.user";
+        type = types.attrsOf types.str;
+        default = { };
+      };
     };
   };
-  config =
-    let
-      themePackage = pkgs."${cfg.themeName}".override {
-        inherit (cfg) themeConfig;
+
+  config = mkIf config.modules.display-managers.sddm.enable {
+    services.displayManager = {
+      inherit defaultSession;
+      sddm = {
+        enable = true;
+        package = pkgs.kdePackages.sddm;
+        wayland.enable = true;
+        # so sddm can access extra dependencies needed
+        extraPackages = [ cfg.themePackage ];
+        theme = mkDefault "sddm-astronaut-theme"; # I hate this abstraction so much
       };
-    in
-    mkIf config.modules.display-managers.sddm.enable {
-      services.displayManager = {
-        inherit defaultSession;
-        sddm = {
-          enable = true;
-          package = pkgs.kdePackages.sddm;
-          wayland.enable = true;
-          # so sddm can use the dependencies in build inputs
-          extraPackages = [ themePackage ];
-          # specificies the theme folder in path /run/current-system/sw/share/sddm/themes
-          theme = "${cfg.themeName}";
-        };
-      };
-      # actually places the theme in the /run/current-system
-      environment.systemPackages = [
-        themePackage
-      ];
     };
+    # places theme in /run/current-system/sw/share/sddm/themes the name of sddm.theme must match the directory exactly
+    environment.systemPackages = [ cfg.themePackage ];
+  };
 }
